Fix issue with extra white space at bottom of InputPage.js

--- a/src/sass/input.scss
+++ b/src/sass/input.scss
@@ -27,13 +27,13 @@
 // ==============================================
 
 .inactive-grey {
-  border-color: 'grey';
-  color: 'grey';
+  border-color: "grey";
+  color: "grey";
 }
 
 .active-white {
-  border-color: 'white';
-  color: 'white';
+  border-color: "white";
+  color: "white";
 }
 
 #mobile-column-margin {
@@ -133,8 +133,7 @@
 // ==============================================
 
 #required-text {
-  position: relative;
-  top: 241px;
+  margin-top: 241px;
   p {
     transform: rotate(90deg);
     font-size: 12pt;
@@ -172,7 +171,7 @@
 }
 
 label {
-  font-family: 'Graphik';
+  font-family: "Graphik";
   font-size: 12pt;
   width: 100%;
   input {
@@ -294,8 +293,8 @@ label {
       display: flex;
       height: 100%;
       flex-direction: column;
-      align-items: 'center';
-      justify-content: 'center';
+      align-items: "center";
+      justify-content: "center";
       p {
         flex: 1;
         height: 100%;
@@ -321,8 +320,8 @@ label {
 // 012
 // =============================
 
-input[type='number']::-webkit-inner-spin-button,
-input[type='number']::-webkit-outer-spin-button {
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   -moz-appearance: none;
   appearance: none;
@@ -349,7 +348,7 @@ input[type='number']::-webkit-outer-spin-button {
   // background-color: darkmagenta;
   width: 100%;
   font-size: 23pt;
-  font-family: 'Graphik';
+  font-family: "Graphik";
   color: white;
   background-color: black;
   border-style: hidden hidden hidden hidden;
@@ -365,7 +364,7 @@ input[type='number']::-webkit-outer-spin-button {
       }
     }
     .dropdown-options {
-      font-family: 'Graphik';
+      font-family: "Graphik";
       font-size: 14pt;
       .selected-option {
         border-bottom: 1px black solid;
@@ -460,7 +459,7 @@ input[type='number']::-webkit-outer-spin-button {
   height: 36px;
   border-radius: 2px;
   margin-bottom: 50px;
-  font-family: 'Graphik';
+  font-family: "Graphik";
   font-size: 14px;
 }
 
@@ -469,7 +468,7 @@ input[type='number']::-webkit-outer-spin-button {
 // =============================
 
 .legal-stuff {
-  font-family: 'Graphik';
+  font-family: "Graphik";
   font-family: 12pt;
   line-height: 21pt;
   margin-bottom: 118px;
